welcome.lessons.welcome.variables.Variables.scala.error
Variables:9: error: value + is not a member of Null
	nbpas=nbpas + 1
                    ^Variables:14: error: value + is not a member of Null
	dejafait= dejafait + 1
                           ^